<resources>
    <string name="app_name">Call recorder and saver</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="action_open">Open</string>
    <string name="action_close">Close</string>

    <string name="author">Jayanth Lokesh</string>
    <string name="intro">Hello Guys this App lets you record All Calls</string>
    <string name="app_version">App version : 1.0</string>

    <string name="delete">Are you Sure you want to delete All Recordings ?</string>
    <string name="delete_incoming">Are you sure you want to delete All incoming Recordings ?</string>
    <string name="delete_outgoing">Are you sure you want to delete All outgoing Recordings ?</string>
    <string name="stopapp">Stop Recording ?, (You can start recording by launching app :)</string>

    <!-- Slide Title and description 1-->
    <string name="slide1_title"> Call Recorder</string>
    <string name="slide1_description1">Record all your Important calls</string>

    <!-- Slide Title and description 2-->
    <string name="slide2_title">Our privacy policy</string>
    <string name="slide2_description1">Lear more about our privacy policy in link provided in the app\'s menu :)</string>
    <string name="slide2_description2">We need certain permission from you to proceed!</string>
    <string name="slide2_description3">(1) We need \"Contacts\" permission to display name, photo of the recorded calls only.</string>
    <string name="slide2_description4">(2) We need \"Telephone\" permission to detect incoming and outgoing calls to record only.</string>
    <string name="slide2_description5">(3) We need \"Storage\" permission to save recorded calls only.</string>
    <string name="slide2_description6">(4) We need \"Microphone\" permission to record incoming and outgoing calls only.</string>

    <!-- Slide Title and description 3-->
    <string name="slide3_title">Get started</string>
    <string name="slide3_description">Launch the app! and record your calls</string>
    <string name="slide3_description2">Learn more about our privacy policy in the link provided in app\'s menu.</string>
    <string name="slide3_description3">Tips: You can disable call recording in the app\'s settings :).</string>


    <string name="my_preferences">com.jayanthl.callrecorder.callrecorderandsaver.MyPreferences</string>
    <string name="my_preferences_key">com.jayanthl.callrecorder.callrecorderandsaver.MyPrefencesKey</string>
    <string name="my_preferences_permission">com.jayanthl.callrecorder.callrecorderandsaver.MyPrefencesPermission</string>


    <!-- app data strings-->
    <string name="callrecordsdirectory">CallRecordingsAndSaver/</string>
    <string name="callrecordfirstname">callrecordings1</string>

    <string name="agree1">I confirm that Call recording is legal in the place where i am living.</string>
    <string name="agree2">I confirm and permit the app to collect personally NON-identifiable data for the purpose of analytics and ads.</string>



    <string name="privacypolicy">Privacy Policy
Jayanth L built the Call Recorder and Saver app as an Ad Supported app. This SERVICE is provided by Jayanth L at no cost and is intended for use as is.
This page is used to inform website visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Call Recorder and Saver unless otherwise defined in this Privacy Policy.

Permissions which we use in our App to serve you
Contacts: We need "Contacts' permission to Display name photo phone number of the recorder calls only.
Telephone: We need "Manage Telephone" permission to detect Incoming and Outgoing calls only.
Storage: We need "Storage" permission to save recorded Incoming and Outgoing calls only.
Microphone: We need "Microphone" permission to record Incoming and Outgoing calls  only.
We use these permission to do the above mentioned particular task, these permissions are asked to solely to do the above mentioned particular tasks.
Information Collection and Use and Analytics
For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to App Usage. The information that I request is retained on your device and is not collected by me in any way
The app does use third party services that may collect information used to identify you.
Link to privacy policy of third party service providers used by the app
We may use third-party Service Providers to monitor and analyze the use of our Service.
Facebook Analytics
Facebook Analytics is a web analytics service offered by Facebook that tracks and reports website traffic. Facebook uses the data collected to track and monitor the use of our Service. This data is shared with other Facebook services. Facebook may use the collected data to contextualise and personalise the ads of its own advertising network.
https://www.facebook.com/full_data_use_policy
Log Data
I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
Cookies
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
Service Providers
I may employ third-party companies and individuals due to the following reasons:
To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
Security
I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
Links to Other Sites
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
Children’s Privacy
These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
Changes to This Privacy Policy
I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
Contact Us
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</string>

</resources>
