<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorsilde_3">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/navigation_icon"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:layout_marginTop="150dp"
        android:id="@+id/imagesld3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide3_title"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:layout_below="@id/imagesld3"
        android:layout_marginTop="12dp"
        android:id="@+id/titlesld3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide3_description"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/titlesld3"
        android:layout_marginTop="12dp"
        android:id="@+id/descrisld3"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide3_description2"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/descrisld3"
        android:layout_marginTop="12dp"
        android:id="@+id/descrisld4"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide3_description3"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/descrisld4"
        android:layout_marginTop="12dp"
        android:id="@+id/descrisld5"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40sp"/>

</RelativeLayout>